force-app/main/default/objects/Installation__c/fields/P_U_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>P_U_Approved_Date__c</fullName>
    <label>P/U Approved Date</label>
    <type>Date</type>
</CustomField>