force-app/main/default/objects/Installation__c/fields/P_U_Approver__c.field-meta.xml
<CustomField>
    <fullName>P_U_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P/U Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations4</relationshipName>
    <type>Lookup</type>
</CustomField>