force-app/main/default/objects/Installation__c/fields/Permit_Received__c.field-meta.xml
<CustomField>
    <fullName>Permit_Received__c</fullName>
    <label>Permit Received</label>
    <type>Date</type>
</CustomField>