force-app/main/default/objects/Installation__c/fields/Permit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Permit_Requested__c</fullName>
    <label>Permit Requested</label>
    <type>Date</type>
</CustomField>