force-app/main/default/objects/Installation__c/fields/Permit_Required__c.field-meta.xml
<CustomField>
    <fullName>Permit_Required__c</fullName>
    <label>Permit Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>