force-app/main/default/objects/Installation__c/fields/Permitting_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Completed_Date__c</fullName>
    <label>Permitting Completed Date</label>
    <type>DateTime</type>
</CustomField>