force-app/main/default/objects/Installation__c/fields/Permitting_Revised_Date__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Revised_Date__c</fullName>
    <label>Permitting Revised Date</label>
    <type>DateTime</type>
</CustomField>