force-app/main/default/objects/Installation__c/fields/Permitting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Start_Date__c</fullName>
    <label>Permitting Start Date</label>
    <type>Date</type>
</CustomField>