force-app/main/default/objects/Installation__c/fields/Permitting_Status__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Status__c</fullName>
    <label>Permitting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Revisions</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>