force-app/main/default/objects/Installation__c/fields/Permitting_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Submitted_Date__c</fullName>
    <label>Permitting Submitted Date</label>
    <type>DateTime</type>
</CustomField>