force-app/main/default/objects/Installation__c/fields/Permitting_Utility_Approval__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Utility_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitting/Utility Approval</label>
    <type>Checkbox</type>
</CustomField>