force-app/main/default/objects/Installation__c/fields/Plans_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Plans_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plans Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>