force-app/main/default/objects/Installation__c/fields/Plans_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Plans_Approved_Date__c</fullName>
    <label>Plans Approved Date</label>
    <type>DateTime</type>
</CustomField>