force-app/main/default/objects/Installation__c/fields/Plans_Counter__c.field-meta.xml
<CustomField>
    <fullName>Plans_Counter__c</fullName>
    <formula>Plans_Submitted_Date__c - DATEVALUE(Plans_submission_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plans Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>