force-app/main/default/objects/Installation__c/fields/Plans_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Plans_Received_Date__c</fullName>
    <label>Plans Received Date</label>
    <type>DateTime</type>
</CustomField>