force-app/main/default/objects/Installation__c/fields/Plans_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plans_Start_Date__c</fullName>
    <label>Plans Start Date</label>
    <type>Date</type>
</CustomField>