force-app/main/default/objects/Installation__c/fields/Plans_Status__c.field-meta.xml
<CustomField>
    <fullName>Plans_Status__c</fullName>
    <label>Plans Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Revisions</fullName>
            </value>
            <value>
                <fullName>Appoved</fullName>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>