force-app/main/default/objects/Installation__c/fields/Plans_submission_date__c.field-meta.xml
<CustomField>
    <fullName>Plans_submission_date__c</fullName>
    <label>Plans Requested Date</label>
    <type>DateTime</type>
</CustomField>