force-app/main/default/objects/Installation__c/fields/Plans_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Plans_Submitted_Date__c</fullName>
    <label>Plans Submitted Date</label>
    <type>Date</type>
</CustomField>