force-app/main/default/objects/Installation__c/fields/Plans_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Plans_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plans Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations7</relationshipName>
    <type>Lookup</type>
</CustomField>