force-app/main/default/objects/Installation__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Materials Delay/Selection</fullName>
            </value>
            <value>
                <fullName>HOA/Permit</fullName>
            </value>
            <value>
                <fullName>Vendor Extension</fullName>
            </value>
            <value>
                <fullName>Inter-Company Payment</fullName>
            </value>
            <value>
                <fullName>Pending Walk Thru</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Customer Non-Payment</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Review Job Costing/Pricing</fullName>
            </value>
            <value>
                <fullName>Customer Non Payment</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>