force-app/main/default/objects/Installation__c/fields/PTO__c.field-meta.xml
<CustomField>
    <fullName>PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PTO</label>
    <type>Checkbox</type>
</CustomField>