force-app/main/default/objects/Installation__c/fields/PTO_Start__c.field-meta.xml
<CustomField>
    <fullName>PTO_Start__c</fullName>
    <formula>IF( CONTAINS(TEXT( Installation_Status__c ),&quot;PTO&quot;),  PTO_Start_Date__c  ,  DATEVALUE(CreatedDate)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTO Start</label>
    <type>Date</type>
</CustomField>