force-app/main/default/objects/Installation__c/fields/PTO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PTO_Start_Date__c</fullName>
    <label>PTO Start Date</label>
    <type>Date</type>
</CustomField>