force-app/main/default/objects/Installation__c/fields/QC_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Call_Status__c</fullName>
    <label>QC Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>