force-app/main/default/objects/Installation__c/fields/Requested_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Install_Date__c</fullName>
    <label>Requested Install Date</label>
    <type>DateTime</type>
</CustomField>