force-app/main/default/objects/Installation__c/fields/Reschedule_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Call_Count__c</fullName>
    <label>Reschedule Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>