force-app/main/default/objects/Installation__c/fields/Reschedule_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Call_Status__c</fullName>
    <label>Reschedule Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>No Good</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Attempted Call</fullName>
                <isActive>false</isActive>
                <label>Attempted Call</label>
            </value>
            <value>
                <fullName>Completed Call</fullName>
                <isActive>false</isActive>
                <label>Completed Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>