force-app/main/default/objects/Installation__c/fields/Sale_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sale_Commission__c</fullName>
    <formula>Gross_Profit__c *  Home_Service__r.Sale_MPV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Sale Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>