force-app/main/default/objects/Installation__c/fields/Sales_Rep_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Personnel</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>