force-app/main/default/objects/Installation__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <formula>Total_City_Tax__c +  Total_County_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>