force-app/main/default/objects/Installation__c/fields/Schedule_AHJ__c.field-meta.xml
<CustomField>
    <fullName>Schedule_AHJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule AHJ</label>
    <type>Checkbox</type>
</CustomField>