force-app/main/default/objects/Installation__c/fields/Send_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Customer</label>
    <type>Checkbox</type>
</CustomField>