force-app/main/default/objects/Installation__c/fields/Share_SE__c.field-meta.xml
<CustomField>
    <fullName>Share_SE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Solar Edge</label>
    <type>Checkbox</type>
</CustomField>