force-app/main/default/objects/Installation__c/fields/Solar_Edge_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Solar_Edge_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Edge Mapping</label>
    <type>Checkbox</type>
</CustomField>