force-app/main/default/objects/Installation__c/fields/SolarStepEmail__c.field-meta.xml
<CustomField>
    <fullName>SolarStepEmail__c</fullName>
    <formula>IF( TEXT(Installation_Status__c) = &quot;Site Survey&quot;, &quot;Step 1&quot;,
IF( TEXT(Installation_Status__c) = &quot;Plans&quot;, &quot;Step 2&quot;,
IF( TEXT(Installation_Status__c) = &quot;Permitting&quot;, &quot;Step 3&quot;,
IF( TEXT(Installation_Status__c) = &quot;Glass Install&quot;, &quot;Step 4&quot;,
IF( TEXT(Installation_Status__c) = &quot;Battery Install&quot;, &quot;Step 5&quot;,
IF( TEXT(Installation_Status__c) = &quot;Commissioning&quot;, &quot;Step 5P&quot;,
IF( TEXT(Installation_Status__c) = &quot;&quot;, &quot;Step 6&quot;,
&quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SolarStepEmail</label>
    <type>Text</type>
</CustomField>