force-app/main/default/objects/Installation__c/fields/SS_Counter__c.field-meta.xml
<CustomField>
    <fullName>SS_Counter__c</fullName>
    <formula>SS_Start_Date__c -  DATEVALUE(Home_Service__r.Closed_Won_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SS Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>