force-app/main/default/objects/Installation__c/fields/SS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SS_End_Date__c</fullName>
    <label>SS End Date</label>
    <type>Date</type>
</CustomField>