force-app/main/default/objects/Installation__c/fields/SS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SS_Start_Date__c</fullName>
    <label>Site Survey Scheduled Date</label>
    <type>Date</type>
</CustomField>