force-app/main/default/objects/Installation__c/fields/TM_Allocation__c.field-meta.xml
<CustomField>
    <fullName>TM_Allocation__c</fullName>
    <formula>Net_Sales_Price__c *  IF( TEXT( Home_Service__r.Lead_Source__c )
= &apos;Self Gen&apos;,0,$Setup.Job_Costing_Settings__c.TM_Allocation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>