force-app/main/default/objects/Installation__c/fields/TM_Allocation_Variance__c.field-meta.xml
<CustomField>
    <fullName>TM_Allocation_Variance__c</fullName>
    <formula>TM_Allocation__c -   Home_Service__r.TM_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Allocation Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>