force-app/main/default/objects/Installation__c/fields/Total_City_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_City_Tax__c</fullName>
    <label>Total City Tax</label>
    <summarizedField>Change_Order__c.Total_City_Tax__c</summarizedField>
    <summaryForeignKey>Change_Order__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>