force-app/main/default/objects/Installation__c/fields/Total_COGS_and_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_COGS_and_Labor__c</fullName>
    <formula>Cost_of_Goods__c +  Total_Cost_of_Labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total COGS and Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>