force-app/main/default/objects/Installation__c/fields/Total_Cost_of_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Labor__c</fullName>
    <formula>Cost_of_Labor__c +  Home_Service__r.Cost_of_labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>