force-app/main/default/objects/Installation__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <label>Total Paid</label>
    <summarizedField>Funding__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding__c.Funding_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>