force-app/main/default/objects/Installation__c/fields/Total_Payment_Amount_Fotmula__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Amount_Fotmula__c</fullName>
    <formula>Funding_Paid__c  -  Total_Reversed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>