force-app/main/default/objects/Installation__c/fields/Total_Reversed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Reversed_Amount__c</fullName>
    <label>Total Reversed Amount</label>
    <summarizedField>Funding__c.Reversed_Amount__c</summarizedField>
    <summaryForeignKey>Funding__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>