force-app/main/default/objects/Installation__c/fields/Total_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Tax__c</fullName>
    <formula>Home_Service__r.Sales_Tax_Total__c +  Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>