force-app/main/default/objects/Installation__c/fields/Utility_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Utility_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility Inspection</label>
    <type>Checkbox</type>
</CustomField>