force-app/main/default/objects/Installation__c/fields/Verify_Photos__c.field-meta.xml
<CustomField>
    <fullName>Verify_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Complete/Uploaded</label>
    <type>Checkbox</type>
</CustomField>