force-app/main/default/objects/Installation__c/fields/X18_Days_Business_From_Plans_Status__c.field-meta.xml
<CustomField>
    <fullName>X18_Days_Business_From_Plans_Status__c</fullName>
    <formula>IF( CONTAINS(TEXT(Installation_Status__c),&quot;Plans&quot;), ( 
IF(MOD(  Plans_Start_Date__c  - DATE(1900, 1, 6), 7) &gt; 3, 
Plans_Start_Date__c + 26, 
IF(MOD( Plans_Start_Date__c - DATE(1900, 1, 6), 7) &gt; 0, 
Plans_Start_Date__c + 24, Plans_Start_Date__c + 25 
)) 
),Plans_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Days Business From Plans Status</label>
    <type>Date</type>
</CustomField>