force-app/main/default/objects/Installation__c/fields/X4_Business_Days_From_Sale_Status__c.field-meta.xml
<CustomField>
    <fullName>X4_Business_Days_From_Sale_Status__c</fullName>
    <formula>IF( CONTAINS(TEXT(Installation_Status__c),&quot;Sale&quot;), (
IF(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7) &gt; 2,
DATEVALUE(CreatedDate) + 6,
IF(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7) &gt; 0,
DATEVALUE(CreatedDate) + 4, DATEVALUE(CreatedDate) + 5
))
),DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4 Business Days From Sale Status</label>
    <type>Date</type>
</CustomField>