force-app/main/default/objects/Installation__c/fields/X5_Business_Days_From_SS_Status__c.field-meta.xml
<CustomField>
    <fullName>X5_Business_Days_From_SS_Status__c</fullName>
    <formula>IF( CONTAINS(TEXT(Installation_Status__c),&quot;Site Survey&quot;), ( 
IF(MOD(  SS_Start_Date__c  - DATE(1900, 1, 6), 7) &gt; 1, 
SS_Start_Date__c + 7, 
IF(MOD( SS_Start_Date__c - DATE(1900, 1, 6), 7) &gt; 0, 
SS_Start_Date__c + 5, SS_Start_Date__c + 6 
)) 
),SS_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Business Days From SS Status</label>
    <type>Date</type>
</CustomField>