force-app/main/default/objects/Installation__c/fields/X7_Business_Days_From_Permitting_Complet__c.field-meta.xml
<CustomField>
    <fullName>X7_Business_Days_From_Permitting_Complet__c</fullName>
    <formula>IF( CONTAINS(TEXT(Installation_Status__c),&quot;Permitting&quot;), ( 
IF(MOD(  DATEVALUE(Permitting_Completed_Date__c)  - DATE(1900, 1, 6), 7) &gt; 4, 
DATEVALUE(Permitting_Completed_Date__c) + 11, 
IF(MOD( DATEVALUE(Permitting_Completed_Date__c) - DATE(1900, 1, 6), 7) &gt; 0, 
DATEVALUE(Permitting_Completed_Date__c) + 9, DATEVALUE(Permitting_Completed_Date__c) + 10 
)) 
),DATEVALUE(Permitting_Completed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7 Business Days From Permitting Complete</label>
    <type>Date</type>
</CustomField>