force-app/main/default/objects/Installation__c/recordTypes/HVAC.recordType-meta.xml
<RecordType>
    <fullName>HVAC</fullName>
    <active>true</active>
    <label>HVAC</label>
</RecordType>