force-app/main/default/objects/Installation__c/recordTypes/Internet_Cable_Satellite.recordType-meta.xml
<RecordType>
    <fullName>Internet_Cable_Satellite</fullName>
    <active>true</active>
    <label>Internet-Cable-Satelite</label>
</RecordType>