force-app/main/default/objects/Installation__c/recordTypes/Pest_Control.recordType-meta.xml
<RecordType>
    <fullName>Pest_Control</fullName>
    <active>true</active>
    <label>Pest Control</label>
</RecordType>