force-app/main/default/objects/Installation__c/recordTypes/Remodel.recordType-meta.xml
<RecordType>
    <fullName>Remodel</fullName>
    <active>true</active>
    <label>Remodel</label>
</RecordType>