force-app/main/default/objects/Installation__c/listViews/Installations.listView-meta.xml
<ListView>
    <fullName>Installations</fullName>
    <columns>NAME</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Installations</label>
</ListView>