force-app/main/default/objects/Installation__c/listViews/Remodel_Installations.listView-meta.xml
<ListView>
    <fullName>Remodel_Installations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appt_End_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Remodel Installations</label>
</ListView>